# snowglobe

./: .clang-format  .gitignore  CMakeLists.txt
libs/sglogger/: CMakeLists.txt  sg_logging.cpp
libs/sglogger/include/: sg_logging.hpp
modules/ecs/: CMakeLists.txt
modules/ecs/include/: component.hpp  entity.hpp  entity_manager.hpp  system.hpp  systems_runner.hpp
modules/ecs/src/: component.cpp  entity.cpp  entity_manager.cpp  systems_runner.cpp
modules/ecs/tests/: entity_manager_tests.cpp  entity_tests.cpp  test_components.hpp
src/: app.cpp  app.hpp  component.cpp  component.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  main.cpp  result.cpp  result.hpp  sg_logging.hpp  sgtypes.hpp  systems_runner.cpp  systems_runner.hpp
